--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+'<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
@@ -30,11 +30,9 @@
   <section id="about" class="section">
     <h2>À propos</h2>
     <p>Je suis Damien Duvauchelle, étudiant en 1ᵉ année de BTS CIEL. Curieux, rigoureux et passionné par les systèmes informatiques et la cybersécurité.</p>
-    <p>j'ai 19 ans</p>
-    <br>
-    <p>j'ai obtenue mon brevet des collègev mon tion assez bien</p>
-    <br>
-    <p>j'ai un bac proffesionel monsion assez bien</p>
+    <p>j'ai 19 ans et j'ai réussi mon Bac pro Systèmes Numériques mention assez bien.</p>
+       <p>j'ai aussi obtenu mon brevet des collèges mention assez bien.</p>
+ 
   </section>
 
   
@@ -65,3 +63,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
