--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-'<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
@@ -11,16 +11,16 @@
     <div class="logo">Duvauchelle Damien</div>
       <nav id="nav" class="hanburger">
         <ul>
-          <li><a href="#about">À propos</a></li>
-          <li><a href="truc.html">Compétences</a></li>
-          <li><a href="#projects">Projets</a></li>                                     
+          <li><a href="#about">Acceuil</a></li>
+          <li><a href="compétence.html">Compétences</a></li>
+          <li><a href="stage.html">Projets</a></li>                                     
         </ul>
       </nav>
     </div>
     
 
   </header>
-
+  <h1 id="mon_ancre"> </a>
   <section class="hero">
     <h1>Étudiant en BTS CIEL</h1>
     <p>Passionné par la cybersécurité et les réseaux intelligents.</p>
@@ -30,12 +30,12 @@
   <section id="about" class="section">
     <h2>À propos</h2>
     <p>Je suis Damien Duvauchelle, étudiant en 1ᵉ année de BTS CIEL. Curieux, rigoureux et passionné par les systèmes informatiques et la cybersécurité.</p>
-    <p>j'ai 19 ans et j'ai réussi mon Bac pro Systèmes Numériques mention assez bien.</p>
-       <p>j'ai aussi obtenu mon brevet des collèges mention assez bien.</p>
- 
+    <p>j'ai 19 ans</p>
+    <br>
+    <p>j'ai obtenue mon brevet des collègev mon tion assez bien</p>
+    <br>
+    <p>j'ai un bac proffesionel monsion assez bien</p>
   </section>
-
-  
 
   <section id="projects" class="section">
     <h2>Projets</h2>
@@ -49,18 +49,23 @@
     </div>
   </section>
 
+  
+
   <section id="contact" class="section" >
     <h2>Contact</h2>
     <div class="contact">
-    <p>📧 duvauchelle.damien25@gmail.com</p>
-    <p><a href="mailto:duvauchelle.damien25@gmail.com" >Télécharger mon CV PDF</a></p>
+    <a href="mailto:duvauchelle.damien25@gmail.com" ><p>📧 duvauchelle.damien25@gmail.com</p></a>
+    Tel: 0695258198
   </section>
-
+    <section id="ancre" class="section">
+    <div class="ancre" >
+    <h2><a href="#mon_ancre">haut de page</a></h2>
+  </div>
+  </section>
   <footer>
     <p>© 2025 Duvauchelle Damien - BTS CIEL</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="#script.js"></script>
 </body>
 </html>
-
