--- a/compétence.html
+++ b/compétence.html
@@ -54,8 +54,11 @@
       <td>bac +2 en cour</td>
     </tr>
   </table>
+
   
-   
+    <footer>
+    <p>© 2025 Duvauchelle Damien - BTS CIEL</p>
+  </footer>
 
     <script src="#script.js"></script>
     
