--- a/stage.html
+++ b/stage.html
@@ -11,7 +11,7 @@
     <div class="logo">Duvauchelle Damien</div>
       <nav id="nav" class="hanburger">
         <ul>
-          <li><a href="#about">Acceuil</a></li>
+          <li><a href="index.html">Acceuil</a></li>
           <li><a href="compétence.html">Compétences</a></li>
           <li><a href="stage.html">Projets</a></li>                                     
         </ul>
@@ -52,7 +52,9 @@
 
 
 
-
+ <footer>
+    <p>© 2025 Duvauchelle Damien - BTS CIEL</p>
+  </footer>
 
     <script src="#script.js"></script>
 </body>
