--- a/compétence.html
+++ b/compétence.html
@@ -41,7 +41,7 @@
   <table class="tableau">
     <tr>
       <th>collège</th>
-      <td>brevvet des collège </td>
+      <td>brevet des collège </td>
       <td>mension assez bien</td>
     </tr>
     <tr>
@@ -63,4 +63,5 @@
     <script src="#script.js"></script>
     
 </body>
+
 </html>
