--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="logo">Duvauchelle Damien</div>
       <nav id="nav" class="hanburger">
         <ul>
-          <li><a href="#about">Acceuil</a></li>
+          <li><a href="#about">Accueil</a></li>
           <li><a href="compétence.html">Compétences</a></li>
           <li><a href="stage.html">Projets</a></li>                                     
         </ul>
@@ -24,7 +24,7 @@
   <section class="hero">
     <h1>Étudiant en BTS CIEL</h1>
     <p>Passionné par la cybersécurité et les réseaux intelligents.</p>
-    <button  onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });">contacter moi</button>
+    <button  onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });">contactez moi</button>
   </section>
 
   <section id="about" class="section">
@@ -32,9 +32,9 @@
     <p>Je suis Damien Duvauchelle, étudiant en 1ᵉ année de BTS CIEL. Curieux, rigoureux et passionné par les systèmes informatiques et la cybersécurité.</p>
     <p>j'ai 19 ans</p>
     <br>
-    <p>j'ai obtenue mon brevet des collègev mon tion assez bien</p>
+    <p>j'ai obtenu mon brevet des collèges mention assez bien</p>
     <br>
-    <p>j'ai un bac proffesionel monsion assez bien</p>
+    <p>j'ai un bac proffesionel mention assez bien</p>
   </section>
 
   <section id="projects" class="section">
@@ -71,3 +71,4 @@
   <script src="#script.js"></script>
 </body>
 </html>
+
