--- a/compétence.html
+++ b/compétence.html
@@ -11,8 +11,8 @@
     <div class="logo">Duvauchelle Damien</div>
     <nav id="nav">
       <ul>
-        <li><a href="index.html">Acceuil</a></li>
-        <li><a href="#skill">Compétences</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="compétence.html>Compétences</a></li>
         <li><a href="stage.html">Projets</a></li>
       </ul>
     </nav>
@@ -37,21 +37,21 @@
       <div class="qualité">🧠 serieux</div>
     </div>
   </section>
-  <p><h2>Mon parcourt scolaire</h2></p>
+  <p><h2>Mon parcours scolaire</h2></p>
   <table class="tableau">
     <tr>
       <th>collège</th>
-      <td>brevet des collège </td>
-      <td>mension assez bien</td>
+      <td>brevet des collèges </td>
+      <td>mention assez bien</td>
     </tr>
     <tr>
       <th>lycée</th>
-      <td>baccalauréa proffesionel</td>
-      <td>montion asssez bien</td>
+      <td>baccalauréat professionnel</td>
+      <td>mention assez bien</td>
     </tr>
     <tr>
       <th>BTS</th>
-      <td>bac +2 en cour</td>
+      <td>bac +2 en cours</td>
     </tr>
   </table>
 
@@ -65,3 +65,4 @@
 </body>
 
 </html>
+
