--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br>
     <p>j'ai obtenu mon brevet des collèges mention assez bien</p>
     <br>
-    <p>j'ai un bac proffesionel mention assez bien</p>
+    <p>j'ai un bac professionnel mention assez bien</p>
   </section>
 
   <section id="projects" class="section">
@@ -71,4 +71,5 @@
   <script src="#script.js"></script>
 </body>
 </html>
+
 
